--- a/blueprint/unifi_protect_doorbell_notification_snapshot.yaml
+++ b/blueprint/unifi_protect_doorbell_notification_snapshot.yaml
@@ -11,7 +11,7 @@ blueprint:
       selector:
           entity:
             domain: binary_sensor
-            device_class: doorbell
+            device_class: Doorbell
 
     camera:
       name: Camera
